--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="name_of_reminder">Name of reminder</string>
     <string name="reminder_settings">Reminder Settings</string>
     <string name="reminder_description">Reminder Description</string>
-    <string name="share">Share?</string>
+    <string name="share">Collaborate?</string>
     <string name="email_if_share">Email (If Share)</string>
     <string name="time_to_alert">Time to alert</string>
     <string name="time_based">Time-Based</string>
     <string name="location_based">Location-Based</string>
+    <string name="next">Finish</string>
 </resources>
