Added Class, Implemented GSON (ANDROID JSON LIBRARY)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="location_based">Location-Based</string>
     <string name="next">Finish</string>
     <string name="alert_type">Alert Type</string>
-    <string name="don_t_alert_please">Don\'t Alert. Please!</string>
-    <string name="please_alert_me">Please Alert Me!</string>
+    <string name="don_t_alert_please">Vibrate</string>
+    <string name="please_alert_me">Sound</string>
+    <string name="enter_time_to_alert">Enter Time To Alert</string>
+    <string name="strength">Strength</string>
 </resources>
