Added RecyclerView, Added colors and created a delete button. Also, added a reminder adapter and edited mainActivity.java and added a saved preferences. Also added a interface and edited "activity_reminder_setup.xml" with adding "reminder_list_row.xml".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="please_alert_me">Sound</string>
     <string name="enter_time_to_alert">Enter Time To Alert</string>
     <string name="strength">Strength</string>
+    <string name="delete">Delete</string>
 </resources>
